Correction to Jerrold entry in protocols.ini
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@470 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -749,8 +749,8 @@ Code.740=0B 1A 22 80 15 E3 BE 01 16 08 08 01 A1 03 17 69 78 54 06 C7 02 08 01 01
 
 [Jerrold]
 PID=00 06
-CmdTranslator=Translator(lsb,comp)
-CmdParms=OBC=0
+CmdTranslator=Translator(lsb)
+CmdParms=OBC:5=0
 Notes=
 Code.S3C80=00 00 01 8B 0E 84 41 00 05 00 1D 16 17 00 1D 0E F6 2E 63 8D 01 46
 Code.740=00 00 01 80 0C A0 E1 40 12 00 05 0F AC 0A EF 1D 96 4C 00 FF
@@ -1213,7 +1213,7 @@ Code.6805-RC16/18=11 26 32 20 10 8F 45 08 08 00 6C 6D 01 6C 48 48 6F 00 31 67 B4
 
 [Panasonic Multi-Device (Hacked)]
 PID=00 42
-OldNAmes=Panasonic Combo2
+OldNames=Panasonic Combo2
 DevParms=Main Device=160,Sub Device=0,OEM Dev1=2,OEM Dev2=32
 DeviceTranslator=Translator(lsb,comp,0,8,16)  \
                  Translator(lsb,comp,1,8,24) \
