--- a/protocols.ini
+++ b/protocols.ini
@@ -824,17 +824,18 @@ Code.740=10 1D 11 80 0C E0 A2 01 0A 08 08 02 1F 03 B7 34 7B 3C 02 83 4C 00 FF
 Code.6805-C9=14 1A 11 20 0C E0 E1 00 0A 08 08 02 19 03 AE 1F 92 CC 01 83
 Code.6805-RC16/18=12 2B 11 20 0C C5 41 08 08 00 4A E6 02 4A 17 34 7B A6 03 B7_80 CC 01 AF
 
-[NEC 2DEV Combo (*)]
-PID=01 1A
-DevParms=Device1:8=0,Sub-Dev1:8=[-0],Device2:8=0,Sub-Dev2:8=[-2],NEC Style:NEC1|NEC2|NECx1|NECx2
-DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
-              Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24)
-FixedData=ff 00 ff 00
-CmdParms=OBC:8=0,Device:0|1,Type:NEC1|NEC2|||NECx1|NECx2=0
-CmdTranslator=Translator(lsb,comp,0,8,0) Translator(comp,1,1,10) Translator(2,5,11)
-CmdParmInit=PickInitializer(1,0,2)
-DefaultCmd=FF 00
-CmdIndex=0
+[NEC 2DEV Combo] 
+PID=01 1A 
+DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2] 
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \ 
+                 Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24) 
+FixedData=ff 00 ff 00 
+CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,1,8) Translator(2,1,11,1) Translator(2,1,15) 
+CmdParms=OBC:8=0,Device:0|1,Style :NEC1|NEC2|NECx1|NECx2=0 
+CmdParmInit=PickInitializer(1,N0,N2) 
+DefaultCmd=00 20 
+CmdIndex=0 
+Notes=38.1 kHz  IR.exe and other tools that use DecodeIR.dll will decode a NECx1 or NECx2 protocol only if device=sub-device. 
 Code.S3C80=43 8B 42 8B 14 CF 44 08 08 01 18 01 06 01 18 03 39 D2 DC 11 94 08 B6 08 CA E6 10 02 08 08 37 0E 06 E4 05 03 E4 06 04 E4 07 05 E4 07 06 60 06 37 0B 05 E4 03 04 60 04 37 06 05 F6 01 04 7B 09 37 09 0C 37 01 03 46 29 0D 46 29 01 8D 01 49 E4 22 1E E4 23 1F 37 01 EB F6 01 49 E6 28 C1 60 03 E6 12 01 8B E4
 
 [NEC1]
