--- a/protocols.ini
+++ b/protocols.ini
@@ -466,6 +466,17 @@ protocol and parameters entered above. \
 Copy and paste the Device Upgrade Code and the Protocol Code into \
 IR.exe in the normal fashion.
 
+[DirecTV] 
+PID=01 62 
+CmdTranslator=Translator() 
+CmdParms=OBC=0 
+DevParms=Device Number:4=12,Parm:4:$=3 
+DeviceTranslator=Translator(0,4) Translator(1,4,4) 
+FixedData=C3 
+Notes=38.5 kHz {38k,600,msb}<1,-1|1,-2|2,-1|2,-2>(10,-2,D:4,F:8,C:4,1.-50,(5,-2,D:4,F:8,C:4,1,-50)+) \ 
+where C=mod16(F:1:7*14+F:1:6*7+F:1:5*10+F:1:4*5+F:1:3*6+F:1:2*3+F:1:1*2+F:1:0) 
+Code.S3C80=40 84 11 8B 15 00 01 2C 01 18 01 2C 02 44 02 58 01 18 02 58 02 44 0B B8 02 44 B0 0C 68 03 37 64 0B E6 0E 2C E6 0F 5D F6 01 55 8B 0C 37 62 09 E6 0E 43 E6 0F 8A F6 01 55 F6 FF 91 1C 22 F6 01 4C 38 03 F6 FF 7A 38 04 F6 FF 76 38 05 F6 FF 7A 1C 12 F6 01 64 37 60 07 C6 F8 29 04 F6 01 58 C6 F8 11 94 F6 01 58 76 0C 01 EB 06 C6 22 05 DC 20 0C F6 01 0A 7B C6 AF 4C 04 8B 02 4C 02 90 C3 90 C3 08 C3 56 C0 03 86 04 C0 06 C1 12 F6 01 4C 4A EC AF C6 08 01 03 C6 0A 05 07 B0 C0 B0 C2 38 04 48 C3 56 C4 03 87 50 08 02 24 5A FC E0 C3 E0 C3 0E 37 04 EC F0 C2 29 05 AF
+
 [Dishplayer]
 PID=01 0F
 DevParms=Device Code:2=3,Unit:5=0
@@ -824,18 +835,18 @@ Code.740=10 1D 11 80 0C E0 A2 01 0A 08 08 02 1F 03 B7 34 7B 3C 02 83 4C 00 FF
 Code.6805-C9=14 1A 11 20 0C E0 E1 00 0A 08 08 02 19 03 AE 1F 92 CC 01 83
 Code.6805-RC16/18=12 2B 11 20 0C C5 41 08 08 00 4A E6 02 4A 17 34 7B A6 03 B7_80 CC 01 AF
 
-[NEC 2DEV Combo] 
-PID=01 1A 
-DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2] 
-DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \ 
-                 Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24) 
-FixedData=ff 00 ff 00 
-CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,1,8) Translator(2,1,11,1) Translator(2,1,15) 
-CmdParms=OBC:8=0,Device:0|1,Style :NEC1|NEC2|NECx1|NECx2=0 
-CmdParmInit=PickInitializer(1,N0,N2) 
-DefaultCmd=00 20 
-CmdIndex=0 
-Notes=38.1 kHz  IR.exe and other tools that use DecodeIR.dll will decode a NECx1 or NECx2 protocol only if device=sub-device. 
+[NEC 2DEV Combo]
+PID=01 1A
+DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2]
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
+                 Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24)
+FixedData=ff 00 ff 00
+CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,1,8) Translator(2,1,11,1) Translator(2,1,15)
+CmdParms=OBC:8=0,Device:0|1,Style :NEC1|NEC2|NECx1|NECx2=0
+CmdParmInit=PickInitializer(1,N0,N2)
+DefaultCmd=00 20
+CmdIndex=0
+Notes=38.1 kHz  IR.exe and other tools that use DecodeIR.dll will decode a NECx1 or NECx2 protocol only if device=sub-device.
 Code.S3C80=43 8B 42 8B 14 CF 44 08 08 01 18 01 06 01 18 03 39 D2 DC 11 94 08 B6 08 CA E6 10 02 08 08 37 0E 06 E4 05 03 E4 06 04 E4 07 05 E4 07 06 60 06 37 0B 05 E4 03 04 60 04 37 06 05 F6 01 04 7B 09 37 09 0C 37 01 03 46 29 0D 46 29 01 8D 01 49 E4 22 1E E4 23 1F 37 01 EB F6 01 49 E6 28 C1 60 03 E6 12 01 8B E4
 
 [NEC1]
@@ -1881,6 +1892,17 @@ Code.740=0B 19 11 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 \
          CA D0 FC 85 5F 3C 00 57 44 5F 44 5E 22 00 44 57 \
          D0 F6 22 06 90 EF 60
 
+
+[Sharp Combo (Official)]
+PID=00 9C
+CmdParms=Device:5=0,OBC=0
+CmdTranslator=Translator(lsb,comp,0,5,0) Translator(lsb,comp,1,8,8)
+Notes=Official version
+DefaultCmd=F8 00
+CmdIndex=1
+Code.S3C80=3D 92 02 8B 0D 49 05 08 00 84 01 75 00 84 03 87 83 C2 E6 24 03 20 10 0C 05 E4 03 05 60 05 90 05 0A FC B0 C6 A6 0D 02 EB 03 E6 0D 05 F6 01 46 60 04 60 05 F6 01 0A 7B 02 60 C6 F6 01 46 37 61 09 60 04 60 05 F6 01 0A 7B E3 AF
+Code.740=0B 1A 02 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 EB 00 2F CF 00 03 44 5E E6 69 3C 02 5C A2 05 17 5D 0F 3C 02 77 A5 74 A6 75 85 71 86 72 A2 03 86 6B A5 5D 0A CA D0 FC 85 5F 3C 00 57 44 5F 44 5E 22 00 44 57 D0 F6 22 06 90 EF 60
+Code.6805-RC16/18=0F 26 02 20 12 49 05 08 00 41 C5 01 41 CE 41 EB 00 00 00 00 00 00 03 3C_66 A6 05 BE 5A 58 4A 26 FC 53 BF 5C 3F 54 CD 01 AF 33 5B 33 5C CD 01 89 24 02 33 54 CD 01 AF 00 54 09 33 5B 33 5C CD 01 89 24 E3 81
 
 [Sharp DVD]
 PID=00 F8
