--- a/protocols.ini
+++ b/protocols.ini
@@ -66,8 +66,11 @@
 # CmdIndex=<index> index into defaultCmd for where the converted EFC is stored.
 # Notes=notes about the protocol
 # FixedData=hex bytes for default FixedData.  Provides both default value and length.
-# Code.[S3C80|740|6805]=<hex bytes> the protocol upgrade code for this protocol,
-#                       for each processor.
+# Code.<processor>=<hex bytes> the protocol upgrade code
+#                       for this protocol, where processor is one of:
+#                       S3C80, 740, 6805-C9, 6805-RC16/18
+# CodeTranslator.<processor>=className(parms), same as DeviceTranslator above, except
+#                       the mapping is from device parameters to the protocol hex.
 # other=value for specifying any other protocol specific parameters that may
 #             be needed.
 #
@@ -466,15 +469,15 @@ protocol and parameters entered above. \
 Copy and paste the Device Upgrade Code and the Protocol Code into \
 IR.exe in the normal fashion.
 
-[DirecTV] 
-PID=01 62 
-CmdTranslator=Translator() 
-CmdParms=OBC=0 
-DevParms=Device Number:4=12,Parm:4:$=3 
-DeviceTranslator=Translator(0,4) Translator(1,4,4) 
-FixedData=C3 
-Notes=38.5 kHz {38k,600,msb}<1,-1|1,-2|2,-1|2,-2>(10,-2,D:4,F:8,C:4,1.-50,(5,-2,D:4,F:8,C:4,1,-50)+) \ 
-where C=mod16(F:1:7*14+F:1:6*7+F:1:5*10+F:1:4*5+F:1:3*6+F:1:2*3+F:1:1*2+F:1:0) 
+[DirecTV]
+PID=01 62
+CmdTranslator=Translator()
+CmdParms=OBC=0
+DevParms=Device Number:4=12,Parm:4:$=3
+DeviceTranslator=Translator(0,4) Translator(1,4,4)
+FixedData=C3
+Notes=38.5 kHz {38k,600,msb}<1,-1|1,-2|2,-1|2,-2>(10,-2,D:4,F:8,C:4,1.-50,(5,-2,D:4,F:8,C:4,1,-50)+) \
+where C=mod16(F:1:7*14+F:1:6*7+F:1:5*10+F:1:4*5+F:1:3*6+F:1:2*3+F:1:1*2+F:1:0)
 Code.S3C80=40 84 11 8B 15 00 01 2C 01 18 01 2C 02 44 02 58 01 18 02 58 02 44 0B B8 02 44 B0 0C 68 03 37 64 0B E6 0E 2C E6 0F 5D F6 01 55 8B 0C 37 62 09 E6 0E 43 E6 0F 8A F6 01 55 F6 FF 91 1C 22 F6 01 4C 38 03 F6 FF 7A 38 04 F6 FF 76 38 05 F6 FF 7A 1C 12 F6 01 64 37 60 07 C6 F8 29 04 F6 01 58 C6 F8 11 94 F6 01 58 76 0C 01 EB 06 C6 22 05 DC 20 0C F6 01 0A 7B C6 AF 4C 04 8B 02 4C 02 90 C3 90 C3 08 C3 56 C0 03 86 04 C0 06 C1 12 F6 01 4C 4A EC AF C6 08 01 03 C6 0A 05 07 B0 C0 B0 C2 38 04 48 C3 56 C4 03 87 50 08 02 24 5A FC E0 C3 E0 C3 0E 37 04 EC F0 C2 29 05 AF
 
 [Dishplayer]
@@ -1031,7 +1034,8 @@ Code.740=0B 1C 51 80 0E E1 72 10 08 08 01 7F 02 A1 5F 02 80 03 39 44 5D E6 5B A5
 Code.6805-C9=0B 1D 51 B6 5D B8 5E B8 5F B7 60 A6 80 CD 00 B7 A6 03 AE 27 CD 01 9F AE 06 E6 5A E7 4F 5A 26 F9 A6 30 B7 61 A6 10 CD 00 B7 A6 86 4A 26 FD 0E 50 07 A6 02 AE 1E CD 01 9F 39 55 39 54 39 53 39 52 39 51 39 50 3A 61 26 DC A6 10 CD 00 B7 A6 60 AE E0 CD 01 9E CC 01 89
 Code.6805-RC16/18=11 26 51 20 10 8F 45 08 08 00 6C 6D 01 6C 48 48 6F 00 31 67 B4 33 5A 3C 58 B6 5F B8 5A B7 60 3C_66 CC 01 AF
 
-[Panasonic MIX Combo (*)]
+[Panasonic MIX Combo]
+OldNames=Panasonic MIX Combo (*)
 PID=01 1F
 DevParms=Device1,Dev2 / Sub2,Dev3 / Sub3,Dev4 / Sub4,Dev5 / Sub5,Sub-Dev6
 DeviceTranslator=Translator(lsb,comp,0,8,16) Translator(lsb,comp,1,8,24) \
@@ -1686,16 +1690,16 @@ Code.S3C80=28 60 02 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 E0 0F 8C 07 D0 07 BC 
 Code.740=07 0C 02 80 0E F4 72 1D 04 08 03 87 02 3A 08 E8 E4 06 27 E6 69 4C 00 FF
 Code.6805-RC16/18=0A 19 02 20 10 95 45 04 08 01 7C F4 00 7C FA 07 D0 00 33 E7 E8 3C_66 CC 01 AF
 
-#[RCA Combo (w/Duration)]
-#PID=01 43
-#CmdTranslator=Translator(0,4,0) Translator(1,8,8)
-#CmdParms=Device=0:4,OBC=0
-#Notes=S3C8 hacked combo
-#DevParms=Duration
-#DefaultCmd=0f 00
-#CmdIndex=1
-#Code.S3C80=28 60 02 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 E0 0F 8C 07 D0 07 BC 20 10 00 11 E6 0D 00 8D 01 46
-#Code.6805-C9=06 0e 02 20 0f f4 f0 00 1c 04 08 02 26 03 82 08 9b e2 06 06 33 5a 33 5b cd 01 83 cd 01 8c 24 f8 81
+[RCA Combo (w/Duration)]
+PID=01 43
+CmdParms=Device=0:4,OBC=0
+CmdTranslator=Translator(0,4,0) Translator(1,8,8)
+Notes=S3C8 hacked combo
+DevParms=Duration:7:5
+DefaultCmd=0f 00
+CmdIndex=1
+Code.S3C80=28 60 02 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 E0 0F 8C 07 D0 07 BC 20 10 00 11 E6 0D 00 8D 01 46
+CodeTranslator.S3C80=Translator(0,7,233)
 
 [RECS80 (45)]
 PID=00 45
@@ -2022,7 +2026,8 @@ FixedData=48 06
 Code.S3C80=3A 8A 21 8B 14 F5 14 07 08 02 58 01 18 01 2C 01 18 57 D0 04 B0 01 18 00 03 B0 0D 00 10 F6 01 46 F6 01 46 F6 01 46 B0 12 E6 04 C3 F6 01 46 E6 04 8A F6 01 46 E4 05 04 F6 01 46 E6 12 07 E6 03 D0 B6 04 89 8D 01 46
 Code.740=0A 18 21 80 12 A8 90 09 30 04 08 01 B6 01 B6 2B F2 60 01 BA 01 07 18 3C 01 69 22 00 22 00 22 00 3C 00 77 3C C3 5E 22 00 3C 8A 5E 22 00 A5 5F 85 5E 22 00 3C 07 77 3C D0 5D A9 89 45 5E 85 5E 4C 00 FF
 
-[Sony Egg (*)]
+[Sony Egg]
+OldNames=Sony Egg (*)
 PID=01 15
 DevParms=Device1:8=0,Device2:8=[0]
 DeviceTranslator=Translator(lsb,0,8,0) Translator(lsb,1,8,8)
@@ -2043,7 +2048,8 @@ CmdParms=OBC:6=0
 Notes=This protocol is similar to RC5 but has an extra device bit
 Code.S3C80=43 8C 11 8B 13 85 85 10 08 06 01 A6 01 92 01 A6 01 92 A3 34 01 A6 00 00 08 00 27 0D 03 8D 01 46
 
-[Teac-K (*)]
+[Teac-K]
+OldNames=Teac-K (*)
 PID=00 BB
 DevParms=Main Device:7=1,Sub Device:8=4,OEM Code1:8=67,OEM Code2:8=83
 DeviceTranslator=Translator(lsb,comp,0,8,16) Translator(lsb,comp,1,8,24) \
