Updates for Denon Combo (Official) and Sharp Combo (Official)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@493 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -366,8 +366,8 @@ Code.6805-RC16/18=0F 26 11 20 14 49 05 08 00 41 C5 01 41 CE 41 EB 00 00 00 00 00
 
 [Denon Combo (Official)]
 PID=00 9C
-CmdParms=Device:5=0,OBC=0
-CmdTranslator=Translator(lsb,comp,0,5,0) Translator(lsb,comp,1,8,8)
+CmdParms=Device:5=0,Protocol:Sharp|Denon=1,OBC=0
+CmdTranslator=Translator(lsb,comp,0,5,0) Translator(lsb,comp,2,8,8) Translator(lsb,comp,1,1,5)
 Notes=Official version
 DefaultCmd=F8 00
 CmdIndex=1
@@ -1899,8 +1899,8 @@ Code.740=0B 19 11 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 \
 
 [Sharp Combo (Official)]
 PID=00 9C
-CmdParms=Device:5=0,OBC=0
-CmdTranslator=Translator(lsb,comp,0,5,0) Translator(lsb,comp,1,8,8)
+CmdParms=Device:5=0,Protocol:Sharp|Denon=0,OBC=0
+CmdTranslator=Translator(lsb,comp,0,5,0) Translator(lsb,comp,2,8,8) Translator(lsb,comp,1,1,5)
 Notes=Official version
 DefaultCmd=F8 00
 CmdIndex=1
@@ -2137,6 +2137,12 @@ Code.740=0D 18 22 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B \
 Code.6805-C9=0D 19 22 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
              FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 CC 01 \
              83
+
+#[ToadTog]
+#PID=01 80
+#DefaultCmd=00
+#Code.S3C80=00 01 02 03 04
+#Notes=Use only with Device Combiner
 
 [X10]
 PID=00 3F
