--- a/protocols.ini
+++ b/protocols.ini
@@ -1206,7 +1206,8 @@ Code.S3C80=45 91 82 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 \
            0C FB 03 83 C1 C2 EB F3 E4 0B 07 E4 05 08 B4 06 \
            08 B4 07 08 E0 10 8D 01 46
 
-[Panasonic Combo2]
+[Panasonic Combo]
+OldNames=Panasonic Combo2,Panasonic Combo (Official)
 PID=00 CD
 VariantName=2
 DevParms=Main Device=160,OEM Dev1=2,OEM Dev2=32
