Add support for Pioneer 4DEV protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@504 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -14,7 +14,7 @@
 #      - bits, the number of bits to used to store the value
 #      - a bar (|) separated list of choices.
 #      <default value> is the default value to be used.  If there is a choice
-#      list, it is the index of the default choice.  If the default value is in square brackets,
+#      list, it is the index of the default choice.  If the default value is in square brackets [],
 #      it is the index of the device parameter from which to get the default value.  If the index is
 #      preceeded by a dash (-) it means the default value will be calculated by subtracting from the maximum allowable
 #      value (this essentially mean complementing it).
@@ -42,7 +42,9 @@
 #              (default = destOffset - count * bits)
 #          step is the bit offset from each source field to the next (default=bits)
 # CmdParms=<parmlist> in the same format as DevParms, but for command parameters,
-#      such as OBC.
+#      such as OBC.  When the default value is in square brackets [], the value is an index
+#      into the CmdParm array.  When the default value is in curly brackets {}, the value is an
+#      index into the DevParm array.
 # CmdTranslator=className(parms), same as DeviceTranslator, for translation of
 #      command parms to hexCmds
 # CmdParmInit=classname(parms)
@@ -884,7 +886,7 @@ PID=01 40
 DevParms=Device Code=184,NEC2:bool
 DeviceTranslator=Translator(lsb,comp,0,8,8) Translator(1,1,7)
 CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
-CmdParms=Sub Device=[-0],OBC=0
+CmdParms=Sub Device={-0},OBC=0
 CmdIndex=1
 Notes=Combines all subdevice for one device of either NEC1 or NEC2 \
       \n\n\
@@ -903,7 +905,7 @@ PID=00 B6
 DevParms=Device Code=184
 DeviceTranslator=Translator(lsb,comp)
 FixedData=00
-CmdParms=Sub Device=[-0],OBC=0
+CmdParms=Sub Device={-0},OBC=0
 CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
 CmdIndex=1
 DefaultCmd=1d 00
@@ -1237,7 +1239,7 @@ DeviceTranslator=Translator(lsb,comp,0,8,16)  \
                  Translator(lsb,comp,2,8,0)  \
                  Translator(lsb,comp,3,8,8)
 FixedData=bf fb fa ff
-CmdParms=Sub Device=[1],OBC=0
+CmdParms=Sub Device={1},OBC=0
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1)
 DefaultCmd=ff ff
 CmdIndex=0
@@ -1480,6 +1482,20 @@ DefaultCmd=00 80
 Code.S3C80=40 84 32 8B 12 E5 44 08 08 01 09 03 16 01 09 00 FF AD 90 10 A9 08 43 08 07 37 0F 0B 37 0D 05 E4 05 03 8B 03 E4 04 03 E6 C3 02 18 06 90 C0 90 C0 10 C0 FB 03 E6 C3 01 56 C0 F8 EB 06 19 04 19 05 8B 0D 56 C1 07 B2 13 42 01 E4 06 04 09 05 A6 0D 02 EB 03 E6 0D 05 B0 C5 E6 10 01 F6 01 46 F6 01 0A 7B 02 60 C5 20 10 F6 01 46 37 51 05 F6 01 0A 7B E6 AF
 Code.740=0E 14 32 80 10 F6 B8 01 16 08 08 02 F7 01 98 69 34 55 06 81 02 E7 61 0D C7 61 06 A5 5F 85 5D 80 04 A5 5E 85 5D 06 61 06 61 06 61 64 61 F0 1E 5F 61 27 60 04 2F 61 80 02 3F 61 17 60 04 0F 61 80 02 1F 61 A5 60 85 5E A5 61 85 5F 80 06 A5 60 85 5E 85 5F 3C 01 69 22 00 E6 69 22 00 C6 69 22 06 90 F4 60
 Code.6805-RC16/18=10 22 32 20 10 E5 44 08 08 01 82 8B 00 82 84 56 D2 00 84 52 2C 0E 5E 0D 0C 5E 06 B6 5C B7 5A 20 04 B6 5B B7 5A B6 5E B7 50 38 50 38 50 38 50 3D 50 27 1E 15 5E 02 5D 04 12 5E 20 02 13 5E 01 5D 04 10 5E 20 02 11 5E B6 5D B7 5B B6 5E B7 5C 20 06 B6 5D B7 5B B7 5C A6 01 B7_66 CD 01 AF 3C_66 CD 01 AF 3A_66 CD 01 89 24 F1 81
+
+[Pioneer 4DEV]
+PID=01 D0
+DevParms=Device 1=162,Device 2=165,Device 3=164,Device4=160
+DeviceTranslator=Translator(lsb,0,8,0) Translator(lsb,1,8,8,) Translator(lsb,2,8,16) Translator(lsb,3,8,24)
+FixedData=45 A5 25 05
+DefaultCmd=00 00
+CmdParms=Device:1|2|3|4,OBC,OBC2=[1]
+CmdParmInit=PickInitializer(0,0,1,2,3)
+CmdTranslator=Pioneer4DevXlator(0)
+Code.S3C80=40 84 42 8B 12 E5 44 08 08 01 09 03 16 01 09 00 FF AD 90 10 A9 08 43 B0 C0 76 07 04 6B 02 77 03 76 08 04 6B 01 0E 87 20 03 29 03 56 07 FB 56 08 FB F6 01 46 20 10 F6 01 46 00 10 F6 01 0A 7B F1 AF
+Code.740=0C 16 42 80 10 F6 B8 01 15 08 08 03 08 01 A4 56 D2 55 06 7B 02 57 61 02 2F 5B 57 62 02 0F 5B 5F 61 5F 62 22 00 E6 69 22 00 C6 69 22 06 90 F4 60
+Code.6805-C9=0C 17 42 20 10 F6 F8 00 15 08 08 03 07 01 A4 56 D2 55 06 7C 02 05 5E 02 12 58 05 5F 02 10 58 15 5E 15 5F CD 01 83 3C 66 CD 01 83 3A 66 CD 01 8C 24 F1 81
+Code.6805-RC16/18=10 22 42 20 10 E5 44 08 08 01 83 95 00 83 89 56 D2 00 84 53 2B 5F 05 5E 01 59 05 5F 00 59 E6 5A B7 5A 15 5E 15 5F CD 01 AF 3C_66 CD 01 AF 3A_66 CD 01 89 24 F1 81
 
 [Proton]
 PID=00 5C
