Added Lumagen protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@505 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -827,6 +827,15 @@ Notes=This is our current best guess at the "standard" version of Kaseikyo, \
       \nKaseikyo-170.90 where 170 is OEM1 and 90 is OEM2.
 Code.S3C80=46 90 51 8B 12 87 45 08 08 00 D7 00 B5 00 D7 02 6A 88 B8 06 AA 03 41 08 08 E4 07 08 09 07 F0 C0 B4 07 C0 56 C0 0F B4 C0 08 8D 01 46
 
+[Lumagen]
+PID=00 C5
+DevParms=Device:4=2
+DeviceTranslator=Translator(0,4)
+FixedData=00
+CmdParms=OBC:7=0
+CmdTranslator=Translator(0,7,1) XorCheck(1,0,1,7,1)
+Code.S3C80= 3D 92 11 8B 0E 85 41 04 08 00 C8 09 B0 00 C8 04 CE 15 7C 8D 01 46
+
 [Mitsubishi]
 PID=00 14
 CmdTranslator=Translator(lsb,comp)
