Add support for importing KM upgrades that use the Pioneer 4DEV protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@511 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1494,13 +1494,14 @@ Code.6805-RC16/18=10 22 32 20 10 E5 44 08 08 01 82 8B 00 82 84 56 D2 00 84 52 2C
 
 [Pioneer 4DEV]
 PID=01 D0
-DevParms=Device 1=162,Device 2=165,Device 3=164,Device4=160
+DevParms=Device 1=162,Device 2=165,Device 3=164,Device 4=160
 DeviceTranslator=Translator(lsb,0,8,0) Translator(lsb,1,8,8,) Translator(lsb,2,8,16) Translator(lsb,3,8,24)
 FixedData=45 A5 25 05
 DefaultCmd=00 00
 CmdParms=Device:1|2|3|4,OBC,OBC2=[1]
 CmdParmInit=PickInitializer(0,0,1,2,3)
 CmdTranslator=Pioneer4DevXlator(0)
+ImportCmdTranslator=Pioneer4DevImporter(0)
 Code.S3C80=40 84 42 8B 12 E5 44 08 08 01 09 03 16 01 09 00 FF AD 90 10 A9 08 43 B0 C0 76 07 04 6B 02 77 03 76 08 04 6B 01 0E 87 20 03 29 03 56 07 FB 56 08 FB F6 01 46 20 10 F6 01 46 00 10 F6 01 0A 7B F1 AF
 Code.740=0C 16 42 80 10 F6 B8 01 15 08 08 03 08 01 A4 56 D2 55 06 7B 02 57 61 02 2F 5B 57 62 02 0F 5B 5F 61 5F 62 22 00 E6 69 22 00 C6 69 22 06 90 F4 60
 Code.6805-C9=0C 17 42 20 10 F6 F8 00 15 08 08 03 07 01 A4 56 D2 55 06 7C 02 05 5E 02 12 58 05 5F 02 10 58 15 5E 15 5F CD 01 83 3C 66 CD 01 83 3A 66 CD 01 8C 24 F1 81
