Fix support for Pioneer 3DEV protocol.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@512 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1479,9 +1479,10 @@ Code.6805-RC16/18=10 22 12 20 10 E5 44 08 08 01 83 95 00 83 87 69 78 00 84 53 2C
 
 [Pioneer 3DEV]
 PID=00 6A
-CmdParms=Device:1|2|3,OBC=0
+CmdParms=Device:1|2|3,OBC=0,OBC2:8
 CmdParmInit=PickInitializer(0,0,1,2);
-CmdTranslator=Translator(comp,0,2,8,0,1) Translator(lsb,1,8,0)
+CmdTranslator=Pioneer3DevXlator()
+ImportCmdTranslator=Translator(lsb,0,2,8) Translator(lsb,1,5,11)
 Notes=audio/1023
 DevParms=Device 1=162,Device 2=165,Device 3=164
 DeviceTranslator=Translator(lsb,0,8,0) Translator(lsb,1,8,8) \
