Add support for NRC17 protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@516 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -993,6 +993,17 @@ FixedData=00 00
 Code.S3C80=3F 97 21 8B 15 00 00 58 00 74 00 58 00 C6 00 C5 00 74 00 58 01 18 00 58 01 70 1C 1A F6 01 4C 38 03 F6 FF 42 38 04 F6 FF 42 38 05 F6 FF 42 1C 12 F6 01 4C C6 F8 B3 08 F6 01 58 F6 01 0A 7B DB 8D FF 73 5C 04 37 3F 13 37 3D 08 1C 12 F6 01 4C 8D FF 6D 1C 16 F6 01 4C 8D FF 6D 37 3D 08 1C 1E F6 01 4C 8D FF 6D 1C 22 F6 01 4C 8D FF 6D 90 C3 90 C3 5A D1 AF
 Code.740=0B 1C 21 80 01 00 A9 0F 20 DB 00 A2 55 A0 01 22 44 A5 5D 85 54 20 69 01 A5 5E 85 54 20 69 01 A5 5F 85 54 20 69 01 A9 06 20 DB 00 A2 7C A0 78 22 44 22 06 90 D1 80 38 3C 04 56 A9 06 20 DB 00 E7 54 13 C7 54 08 A2 4F A0 01 22 44 80 19 A2 8A A0 01 22 44 80 11 C7 54 08 A2 BD A0 01 22 44 80 06 A2 F8 A0 01 22 44 06 54 06 54 C6 56 D0 CC 60 60
 
+[NRC17]
+PID=00 BD
+FixedData=00
+DevParms=Device Number:7,OBC>127:bool
+DeviceTranslator=Translator(lsb,0,7) Translator(1,1,7)
+DefaultCmd=01
+CmdParms=OBC:8
+CmdTranslator=TranslatorWithDevBool(lsb,1,0,7)
+Code.S3C80=3D 91 11 8B 19 87 84 90 20 08 01 00 F7 00 E3 00 F7 00 E3 1B 46 00 F7 04 C2 00 00 00 D6 F1 08 03 E4 04 03 09 04 B0 05 E6 06 BF E6 07 FF E6 08 80 E6 01 03 E6 10 05 F6 01 46 B0 01 E6 10 02 46 29 01 F6 01 46 E6 01 03 E6 10 05 56 29 FE 8D 01 46
+Code.6805-RC16/18=0F 26 11 20 17 B6 84 90 20 08 08 00 7C 7A 00 7C 7A 0D AD 00 02 7C 73 01 00 00 6B 83 3C_66 B6 5A B7 53 B6 5B B7 54 AD 14 B6 53 B7 5A B6 54 B7 5C A6 00 B7 5B CD 01 AF CD 01 89 24 F8 A6 BF B7 5C A6 FF B7 5A A6 80 B7 5B CC 01 AF
+
 [Pace]
 PID=00 95
 CmdTranslator=Translator(comp)
@@ -1550,7 +1561,7 @@ PID=00 F2
 DevParms=Device Code:5=16,Sub Dev>63=0:bool
 DeviceTranslator=Translator(comp,0,5,3) Translator(1,1,1)
 FixedData=0f
-CmdTranslator=TranslatorFromDev(comp,1,1,1) Translator(comp,0,6) Translator(comp,1,6,6)
+CmdTranslator=TranslatorWithDevBool(comp,1,0,6,2) Translator(comp,1,6,10)
 CmdParms= Sub Device:7=0,OBC:6=0
 DefaultCmd=ff f0
 CmdIndex=1
