--- a/protocols.ini
+++ b/protocols.ini
@@ -47,6 +47,10 @@
 #      index into the DevParm array.
 # CmdTranslator=className(parms), same as DeviceTranslator, for translation of
 #      command parms to hexCmds
+#      Some of the available translators are:
+#      Translator(...) as documented above for DeviceTranslator
+#      TranslatorFromDev(), which uses the device paramters instead of the
+#                           CmdParms to generate the hex command
 # CmdParmInit=classname(parms)
 #      modifies the CmdParms based on user input to DevParms
 #      className is the name of a class that extends the class
@@ -499,6 +503,7 @@ Code.6805-C9=0C 19 11 20 0E E0 70 15 08 05 02 ED 04 59 06 9B 15 08 BC B6 5A B7 5
 
 [Dish Network]
 PID=00 02
+OldNames=Dishplayer (old)
 DevParms=Remote Address (1 to 32) :5=1,Device Code:5=0
 DeviceTranslator=Translator(lsb,0,3,0,2,-1) Translator(lsb,1,5,3)
 CmdParms=OBC:6=0
@@ -523,6 +528,7 @@ Code.740=06 0D 11 80 0E B0 72 17 08 07 03 19 04 9A 02 46 \
 
 [Dish Network]
 PID=00 02
+OldNames=Dishplayer (old)
 VariantName=2
 DevParms=Remote Address (1 to 32) :5=1,Device Code:5=0
 DeviceTranslator=Translator(lsb,0,5,0,0,-1) Translator(lsb,1,5,8)
@@ -544,6 +550,7 @@ Code.6805-C9=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
 
 [Dish Network]
 PID=00 02
+OldNames=Dishplayer (old)
 VariantName=5
 DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Remote Address (1 to 32) :5=1
 DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,0,0,-1)
@@ -1591,6 +1598,7 @@ as you enter data in the RC5 columns and vice-versa. Just ignore the ones you ar
 Code.S3C80=40 9A 42 8B 17 C8 81 10 00 08 01 C2 01 A4 01 C2 01 A4 DE 2C 00 00 06 C2 94 01 06 00 28 08 37 21 18 E4 07 03 E4 08 04 E6 10 00 28 03 76 00 01 6B 45 B6 C2 20 29 03 8D 01 49 E6 25 09 E6 24 04 E6 28 89 E6 12 08 E4 22 1C E4 23 1D 28 08 37 22 08 37 24 0D E4 06 03 8B 0B 37 24 08 E4 05 03 8B 03 E4 04 03 E4 07 04 E4 08 05 76 00 01 6B 03 B6 03 20 77 77 E6 10 01 8D 01 49
 Code.740=0C 1C 42 80 11 E9 C0 20 20 08 08 02 07 02 06 02 C9 6F 20 00 00 04 17 62 38 3C 01 69 A5 62 4A 29 03 AA B5 5D 85 5D A5 61 85 5E A5 62 85 5F 17 5A 06 A5 5D 49 20 85 5D 3C 04 77 2F 5C 3C C0 7E 22 00 3C A8 7E 22 00 A2 78 A0 5D 22 44 22 06 90 EC 60 3C 06 6C 3C E1 7E 3C 81 7F 3C 21 80 3C 01 69 A5 73 85 71 A5 74 85 72 A5 62 85 5E A5 61 17 5A 02 49 20 85 5D 4C 00 FF 60
 Code.6805-RC16/18=10 27 42 20 15 87 81 10 08 04 00 DE E1 00 DE E1 4A 0A 6E F9 00 00 03 00 84 09 01 5F 22 B6 5F 44 A4 03 97 E6 5A B7 5A 01 57 04 A8 20 B7 5A 3F 58 B6 5E B7 5B B6 5F B7 5C A6 02 B7_66 CC 01 C4 A6 06 B7_68 B6 5E B7 5A B6 5F B7 5B A6 01 B7_66 A6 C5 B7_7B B6_71 B7_6F B6_72 B7_70 01 57 06 B6 5A A8 20 B7 5A CC 01 B2
+
 [RC-6]
 PID=00 58
 CmdTranslator=Translator()
@@ -1602,7 +1610,6 @@ FixedData=80 00
 Code.S3C80=35 A5 21 8B 13 CE 05 08 08 00 DE 00 00 00 00 00 CC D0 52 05 35 01 A8 04 4C 03 C7 34 B0 C5 B0 C6 0C 04 1C 55 2C C0 90 C3 FB 02 B2 12 E0 C2 E0 C2 0A F4 0C 06 02 05 5E D7 01 60 C6 EB E3 A6 C5 06 6B 05 4E C7 34 8B D7 E6 07 C0 76 00 01 EB 03 E6 07 30 E6 10 05 E6 11 04 E6 01 03 8D 01 46
 Code.740=0E 19 21 80 0F E1 92 11 10 08 04 01 83 01 80 67 F6 60 02 17 22 1F 20 84 01 85 5D 22 23 A4 5F 20 84 01 85 5F 20 84 01 85 60 84 54 20 84 01 85 61 20 84 01 85 62 A9 03 17 5A 02 A9 0C A2 04 06 62 26 61 26 60 26 5F 2A CA D0 F4 85 5E 3C 05 69 4C 00 FF A2 04 0A 38 2A 06 54 90 02 49 03 CA D0 F4 60
 Code.6805-RC16/18=0D 2A 21 20 11 C7 85 10 08 08 00 6D 00 00 00 70 67 F6 00 20 93 E2 B6 5C B7 5D CD 01 8F AD 35 B7 5A CD 01 92 A6 03 01 57 02 A6 0C AD 23 B7 5B AD 23 B7 5C AD 1B BE 5D BF 50 AD 15 B7 5D AD 15 B7 5E AD 0D 48 48 48 48 B7 5F A6 05 B7_66 CC 01 AF AE 02 20 02 AE 04 48 99 49 38 50 24 02 A8 03 5A 26 F4 81
-
 
 [RC6-M-20n]
 PID=00 20
@@ -1734,7 +1741,7 @@ PID=01 43
 CmdParms=Device=0:4,OBC=0
 CmdTranslator=Translator(0,4,0) Translator(1,8,8)
 Notes=S3C8 hacked combo
-DevParms=Duration:7:5
+DevParms=Duration:7
 DefaultCmd=0f 00
 CmdIndex=1
 Code.S3C80=28 60 02 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 E0 0F 8C 07 D0 07 BC 20 10 00 11 E6 0D 00 8D 01 46
@@ -2176,12 +2183,6 @@ Code.740=0D 18 22 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B \
 Code.6805-C9=0D 19 22 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
              FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 CC 01 \
              83
-
-#[ToadTog]
-#PID=01 80
-#DefaultCmd=00
-#Code.S3C80=00 01 02 03 04
-#Notes=Use only with Device Combiner
 
 [X10]
 PID=00 3F
