--- a/protocols.ini
+++ b/protocols.ini
@@ -63,6 +63,7 @@
 #                  by that number.
 #              If n followed by a number, the choice is changed, but is hidden if
 #                  the selected DevParm is blank.
+#      ParmInitializer(cmdNdx,devNdx,bitPos,bitCnt)
 # Type=className the name of the class used to drive the KeyMapMaster protocol
 #      specific function.  If the class cannot be instantiated,
 #      the protocol will not be available in KeyMapMaster.  The protocol must
@@ -268,11 +269,12 @@ Code.6805-RC16/18=0F 26 12 20 11 E6 44 08 08 01 88 A9 00 88 90 69 34 00 84 BE 6C
 
 [Akai]
 PID=00 0D
-DevParms=Device Code:8=0
-DeviceTranslator=Translator(lsb)
+DevParms=Device Code:3=0
+DeviceTranslator=Translator(lsb,comp,0,3)
 FixedData=00
-CmdParms=OBC:8
-CmdTranslator=Translator(lsb)
+CmdParmInit=ParmInitializer(0,0,2,1)
+CmdParms=Device:Dev. 1|Dev. 2,OBC:7=0
+CmdTranslator=Translator(0,1,comp) Translator(lsb,comp,1,7,1)
 DefaultCmd=00
 Code.S3C80=3D 91 11 8B 0E C5 41 02 08 00 8E 01 6C 00 8E 03 7B 31 56 8D 01 46
 Code.740=0A 1A 11 80 0C E0 A2 01 0B 02 08 01 EC 03 4A 18 B4 4C 00 FF
@@ -642,7 +644,7 @@ DevParms=Device 1:6=0,Device 2:6=[0],Device 3:6=[1]
 DeviceTranslator=Translator(lsb,comp,0,6,0) Translator(lsb,comp,1,6,8) \
                  Translator(lsb,comp,2,6,16)
 CmdParms=Device:Dev. 1|Dev. 2|Dev. 3|OBC=0,OBC:6=0
-CmdParmInit=ParmInitializer(0)
+CmdParmInit=PickInitializer(0,0,n1,n2)
 CmdTranslator=Translator(0,2,6) Translator(lsb,comp,1,6)
 Notes=
 FixedData=00 00 00
@@ -1026,7 +1028,7 @@ Code.6805-RC16/18=0F 26 11 20 14 C5 45 02 08 04 9B 59 06 9B CF 78 0F 00 03 9B 1E
 [Panasonic (old)]
 PID=00 00
 CmdParms=Device:Dev. 1|Dev. 2|Dev. 3|OBC/2=0,OBC:6=0
-CmdParmInit=ParmInitializer(0)
+CmdParmInit=PickInitializer(0,0,N1,N2)
 CmdTranslator=Translator(lsb,comp,0,2,6) Translator(lsb,1,6,0)
 Notes=
 DevParms=Device 1=27:5,Device 2=[0]:5,Device 3=[1]:5
