Enabled pid-0083 for TV-0159
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@528 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1331,6 +1331,20 @@ Code.S3C80=45 91 51 8B 12 8F 45 08 08 00 DA 02 7B 00 DA 00 C6 90 C9 06 D0 03 54 
 # Code.740=00 00 01 A5 5D A0 50 22 42 1A D0 F9 60
 # Code.6805-C9=00 00 01 CD 01 92 A6 51 CD 01 9E 3A 50 26 F7 81
 
+[pid-0083]
+PID=00 83
+CmdParms=OBC:5=0
+CmdTranslator=Translator(comp,0,5)
+DefaultCmd=00
+Notes=This is a unique, limited protocol with no device number and only 32 possible commands. \
+      It was probably used in only one model of original TV remote, apparently sold with \
+      Fisher, Sanyo and Sears TVs.  That remote corresponds to UEI's TV/0159, so \
+      recreating TV/0159 for remotes lacking it is the only purpose for this protocol
+Code.S3C80=38 74 01 8B 0E 84 42 00 05 05 85 10 88 05 85 26 A8 95 19 0C 18 1C C0 2C 04 F6 01 5B 9E 0C 14 1C C8 2C 04 F6 01 5B AE 8D 01 46
+Code.740=0A 12 01 80 0B E0 60 80 08 02 0B F5 1A AB 62 AF 22 09 B0 02 2F 7F A2 05 A9 00 0A 0A 3A F7 5D 01 3A CA F0 06 85 5E 06 5D 80 F0 6A 6A 6A 85 5D E6 5B 4C 00 FF
+Code.6805-C9=0A 13 01 20 0C E0 E0 00 80 08 02 0B EE 1A 95 62 10 CD 01 86 25 02 12 7C AE 05 4F 48 48 4C 0F 5A 01 4C 5A 27 06 B7 5B 38 5A 20 F0 46 46 46 B7 5A 3C 58 CD 01 83 81
+Code.6805-RC16/18=0E 1E 01 20 0D 85 C2 40 08 02 28 C2 4E 23 C2 5E 4A 8A AE 05 4F 48 48 4C 0F 5A 01 4C 5A 27 06 B7 5B 38 5A 20 F0 46 46 46 B7 5A 3C 58 CC 01 AF
+
 [Pioneer]
 PID=00 E2
 CmdTranslator=Translator(lsb,comp)
@@ -2724,13 +2738,6 @@ Code.6805-RC16/18=0C 26 11 20 0F C5 01 08 00 00 7C 7D 04 7C FB AF C8 04 7C 01 0F
 # Code.S3C80=3E 95 21 8B 12 95 45 06 07 00 6B 00 79 00 6B 01 73 4A 1F 00 6B 01 73 76 05 01 6B 02 20 01 9E 0C 14 1C C0 2C 04 F6 01 5B 8D 01 46
 # Code.6805-RC16/18=10 26 21 20 10 95 45 06 07 00 32 4A 00 32 C6 25 1A 00 00 32 C6 01 5C 02 3C 58 3C D6 B6 B7 B7 BA B6 B8 B7 BB B6 B9 B7 BC CC 01 AF
 #
-# [pid: 00 83]
-# PID=00 83
-# DefaultCmd=00
-# Code.S3C80=38 74 01 8B 0E 84 42 00 05 05 85 10 88 05 85 26 A8 95 19 0C 18 1C C0 2C 04 F6 01 5B 9E 0C 14 1C C8 2C 04 F6 01 5B AE 8D 01 46
-# Code.740=0A 12 01 80 0B E0 60 80 08 02 0B F5 1A AB 62 AF 22 09 B0 02 2F 7F A2 05 A9 00 0A 0A 3A F7 5D 01 3A CA F0 06 85 5E 06 5D 80 F0 6A 6A 6A 85 5D E6 5B 4C 00 FF
-# Code.6805-C9=0A 13 01 20 0C E0 E0 00 80 08 02 0B EE 1A 95 62 10 CD 01 86 25 02 12 7C AE 05 4F 48 48 4C 0F 5A 01 4C 5A 27 06 B7 5B 38 5A 20 F0 46 46 46 B7 5A 3C 58 CD 01 83 81
-# Code.6805-RC16/18=0E 1E 01 20 0D 85 C2 40 08 02 28 C2 4E 23 C2 5E 4A 8A AE 05 4F 48 48 4C 0F 5A 01 4C 5A 27 06 B7 5B 38 5A 20 F0 46 46 46 B7 5A 3C 58 CC 01 AF
 #
 # [pid: 00 85]
 # PID=00 85
