--- a/protocols.ini
+++ b/protocols.ini
@@ -919,6 +919,7 @@ Code.S3C80=43 8B 22 8B 12 CF 44 08 08 01 18 01 06 01 18 03 39 D2 DC 11 94 08 B6 
 Code.740=0B 1A 22 80 15 E3 BE 01 16 08 08 01 A1 03 17 69 78 54 06 C7 02 08 01 01 03 DB A5 5E 85 5D A5 5F 85 5E A5 60 85 5F 44 60 E6 69 4C 00 FF
 
 [NEC1 Combo]
+OldNames=NEC1 Combo (Official)
 PID=00 B6
 DevParms=Device Code=184
 DeviceTranslator=Translator(lsb,comp)
