Added protocol RC6-6-32
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@535 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1628,6 +1628,41 @@ Code.S3C80=35 A5 21 8B 13 CE 05 08 08 00 DE 00 00 00 00 00 CC D0 52 05 35 01 A8 
 Code.740=0E 19 21 80 0F E1 92 11 10 08 04 01 83 01 80 67 F6 60 02 17 22 1F 20 84 01 85 5D 22 23 A4 5F 20 84 01 85 5F 20 84 01 85 60 84 54 20 84 01 85 61 20 84 01 85 62 A9 03 17 5A 02 A9 0C A2 04 06 62 26 61 26 60 26 5F 2A CA D0 F4 85 5E 3C 05 69 4C 00 FF A2 04 0A 38 2A 06 54 90 02 49 03 CA D0 F4 60
 Code.6805-RC16/18=0D 2A 21 20 11 C7 85 10 08 08 00 6D 00 00 00 70 67 F6 00 20 93 E2 B6 5C B7 5D CD 01 8F AD 35 B7 5A CD 01 92 A6 03 01 57 02 A6 0C AD 23 B7 5B AD 23 B7 5C AD 1B BE 5D BF 50 AD 15 B7 5D AD 15 B7 5E AD 0D 48 48 48 48 B7 5F A6 05 B7_66 CC 01 AF AE 02 20 02 AE 04 48 99 49 38 50 24 02 A8 03 5A 26 F4 81
 
+[RC6-6-32]
+PID=01 2a
+DevParms=Device:8=128,Sub-Device:16=3844
+DeviceTranslator=Translator(0,8,8) Translator(1,8,16,8) Translator(1,7,25)
+FixedData=e2 00 00 00
+CmdParms=OBC
+CmdTranslator=Translator(0)
+DefaultCmd=00
+CmdIndex=0
+Code.S3C80=40 9a 41 8b 0d 00 05 35 01 a8 00 dc 00 00 00 00 \
+           00 c3 76 03 02 6b 08 76 00 01 6b 03 b6 06 80 76 \
+           03 01 6b 0b 56 03 fe 76 00 01 6b 03 46 03 01 1c \
+           12 f6 01 4c 38 03 f6 ff 7a f6 ff 55 b0 c6 87 36 \
+           04 f6 ff 7e 6e 37 64 f6 c6 f8 88 00 f6 01 58 f6 \
+           01 0a 7b db af 76 03 01 6b 0b f6 ff 70 f6 ff 70 \
+           f6 ff 75 8b 10 1c 1a f6 ff 75 f6 ff 75 f6 ff 70 \
+           1c 16 8d 01 4c 1c 1a 8d 01 4c 4c 04 8b 02 4c 08 \
+           37 3f 08 f6 ff 75 f6 ff 70 8b 06 f6 ff 70 f6 ff \
+           75 90 c3 4a eb af
+Code.740=0c 1c 41 ad 3f 04 17 5d 04 33 02 6f 5d 37 5d 04 \
+         33 02 ef 60 49 02 8d 3f 04 a9 60 20 db 00 a2 16 \
+         a0 02 22 44 a5 5d 85 56 20 93 01 67 5d 0d a2 1b \
+         a0 02 22 44 a9 20 20 db 00 80 0b a9 20 20 db 00 \
+         a2 1b a0 02 22 44 a5 5e 20 98 01 a5 5f 20 98 01 \
+         a5 60 20 98 01 a5 61 20 98 01 a2 2a a0 a1 22 44 \
+         60 3c 04 57 80 05 85 56 3c 08 57 26 56 b0 0d a2 \
+         86 a0 01 22 44 a9 10 20 db 00 80 0b a9 10 20 db \
+         00 a2 86 a0 01 22 44 c6 57 d0 e0 60
+Notes=This protocol is used for Windows MCE.  When learning signals from a \
+Windows MCE remote, you will see two different sub-device values.  There is \
+only one bit different between these values, bit 7.  Use the smaller of the \
+two values in the Sub-device field.\
+\n\nFor a MS Windows MCE remote, we have seen Device-128 and Sub-Device=3844/3972\
+\n\nFor a Dell Windows MCE remote, we have seen Device=128 and Sub-Device=7211/7339
+
 [RC6-M-20n]
 PID=00 20
 VariantName=short
@@ -1674,6 +1709,8 @@ FixedData=80 00
 DeviceTranslator=Translator(0,3,1) Translator(1,8,8) Translator(2,4,4)
 CmdParms=OBC=0
 CmdTranslator=Translator()
+# Code.S3C80=40 9A 21 8B 13 87 85 00 08 04 00 DE 00 00 00 00 00 CA F1 38 05 35 01 A8 E4 03 2D E4 04 2E E4 05 2F 08 2D F6 FF 62 19 03 E6 04 03 08 2E F6 FF 62 19 05 F6 FF 62 19 06 08 2D F0 C0 F6 FF 62 19 07 08 2F F6 FF 62 19 08 F6 FF 62 19 09 2C 04 10 09 10 08 10 07 10 06 10 05 10 04 2A F2 E6 10 06 8D 01 46 2C 04 CF 10 C1 DF 10 C1 90 C0 FB 03 B6 C1 03 2A F1 AF
+# Code.740=0C 1C 21 A9 60 20 DB 00 A2 16 A0 02 22 44 22 1F 20 74 01 A2 1B A0 02 22 44 A9 20 20 DB 00 22 23 20 79 01 22 1F 06 54 06 54 06 54 06 54 20 74 01 A5 5F 85 54 20 79 01 A2 2A A0 A1 22 44 22 06 90 C2 60 3C 04 55 80 03 3C 08 55 26 54 B0 0D A2 86 A0 01 22 44 A9 10 20 DB 00 80 0B A9 10 20 DB 00 A2 86 A0 01 22 44 C6 55 D0 E0 60
 
 [RC6-M-24n]
 PID=00 40
@@ -1985,6 +2022,7 @@ Code.740=0B 1A 52 80 10 E1 72 10 08 08 01 7F 02 94 19 10 80 03 2B 00 08 07 5D 06
 Code.6805-RC16/18=11 24 52 20 18 8F 45 08 08 00 63 69 01 63 3A 13 C2 00 31 25 A8 49 3E 20 86 13 28 2A 9D 3C 58 03 5A 0B 00 5A 22 B6_79 B7_64 B6_7A B7_65 01 5A 0A B6_77 B7_6F B6_78 B7_70 17_7B 03 5A 12 B6_75 B7_6F B6_76 B7_70 20 08 A6 2A B7_6F A6 80 B7_70 CC 01 B2
 
 [Sony 12/15]
+OldNames=Sony12/15
 PID=00 CA
 CmdTranslator=Translator(0,1,7) Translator(lsb,1,7)
 CmdParms=Device:0|1,OBC=0
@@ -2383,8 +2421,6 @@ Code.6805-RC16/18=0C 26 11 20 0F C5 01 08 00 00 7C 7D 04 7C FB AF C8 04 7C 01 0F
 # [pid: 00 20]
 # PID=00 20
 # DefaultCmd=00
-# Code.S3C80=40 9A 21 8B 13 87 85 00 08 04 00 DE 00 00 00 00 00 CA F1 38 05 35 01 A8 E4 03 2D E4 04 2E E4 05 2F 08 2D F6 FF 62 19 03 E6 04 03 08 2E F6 FF 62 19 05 F6 FF 62 19 06 08 2D F0 C0 F6 FF 62 19 07 08 2F F6 FF 62 19 08 F6 FF 62 19 09 2C 04 10 09 10 08 10 07 10 06 10 05 10 04 2A F2 E6 10 06 8D 01 46 2C 04 CF 10 C1 DF 10 C1 90 C0 FB 03 B6 C1 03 2A F1 AF
-# Code.740=0C 1C 21 A9 60 20 DB 00 A2 16 A0 02 22 44 22 1F 20 74 01 A2 1B A0 02 22 44 A9 20 20 DB 00 22 23 20 79 01 22 1F 06 54 06 54 06 54 06 54 20 74 01 A5 5F 85 54 20 79 01 A2 2A A0 A1 22 44 22 06 90 C2 60 3C 04 55 80 03 3C 08 55 26 54 B0 0D A2 86 A0 01 22 44 A9 10 20 DB 00 80 0B A9 10 20 DB 00 A2 86 A0 01 22 44 C6 55 D0 E0 60
 #
 # [pid: 00 21]
 # PID=00 21
