--- a/protocols.ini
+++ b/protocols.ini
@@ -845,6 +845,47 @@ CmdParms=OBC:7=0
 CmdTranslator=Translator(0,7,1) XorCheck(1,0,1,7,1)
 Code.S3C80= 3D 92 11 8B 0E 85 41 04 08 00 C8 09 B0 00 C8 04 CE 15 7C 8D 01 46
 
+[MCE]
+PID=01 2a
+DevParms=Device:7=4,OEM2:8=15
+DeviceTranslator=Translator(0,7,25) Translator(1,8,16)
+FixedData=e2 80 00 00
+CmdParms=OBC
+CmdTranslator=Translator(0)
+DefaultCmd=00
+CmdIndex=0
+Code.S3C80=40 9a 41 8b 0d 00 05 35 01 a8 00 dc 00 00 00 00 \
+           00 c3 76 03 02 6b 08 76 00 01 6b 03 b6 06 80 76 \
+           03 01 6b 0b 56 03 fe 76 00 01 6b 03 46 03 01 1c \
+           12 f6 01 4c 38 03 f6 ff 7a f6 ff 55 b0 c6 87 36 \
+           04 f6 ff 7e 6e 37 64 f6 c6 f8 88 00 f6 01 58 f6 \
+           01 0a 7b db af 76 03 01 6b 0b f6 ff 70 f6 ff 70 \
+           f6 ff 75 8b 10 1c 1a f6 ff 75 f6 ff 75 f6 ff 70 \
+           1c 16 8d 01 4c 1c 1a 8d 01 4c 4c 04 8b 02 4c 08 \
+           37 3f 08 f6 ff 75 f6 ff 70 8b 06 f6 ff 70 f6 ff \
+           75 90 c3 4a eb af
+Code.740=0c 1c 41 ad 3f 04 17 5d 04 33 02 6f 5d 37 5d 04 \
+         33 02 ef 60 49 02 8d 3f 04 a9 60 20 db 00 a2 16 \
+         a0 02 22 44 a5 5d 85 56 20 93 01 67 5d 0d a2 1b \
+         a0 02 22 44 a9 20 20 db 00 80 0b a9 20 20 db 00 \
+         a2 1b a0 02 22 44 a5 5e 20 98 01 a5 5f 20 98 01 \
+         a5 60 20 98 01 a5 61 20 98 01 a2 2a a0 a1 22 44 \
+         60 3c 04 57 80 05 85 56 3c 08 57 26 56 b0 0d a2 \
+         86 a0 01 22 44 a9 10 20 db 00 80 0b a9 10 20 db \
+         00 a2 86 a0 01 22 44 c6 57 d0 e0 60
+Notes=MCE is a form of RC6-6-32\n\
+The correspondence between fields of MCE and fields of RC6-M-32 is:\n\
+. The RC6 M value is 6 because the protocol is RC6-6-32\n\
+. The RC6 Toggle bit is always zero in MCE\n\
+. The RC6 Device is the OEM1 field of MCE, which always has the value 128\n\
+. The RC6 Subdevice is the MCE Device plus 256 times the OEM2 plus 128 times the MCE toggle bit\n\
+for example in Microsoft MCE, device is 4 and OEM2 is 15, so the RC6-6-32 device is 128 and \
+subdevice is 4+256*15+(either 128 or 0) = either 3844 or 3972\n\n\
+The MCE toggle bit actively toggles when this protocol is used, so you do not need the \
+Windows registry change that disables debounce (to work with learned signals in which the \
+toggle bit isn't active).  The RC6 toggle bit is a different bit than the MCE toggle bit. \
+The RC6 toggle bit is always zero in MCE signals.
+
 [Mitsubishi]
 PID=00 14
 CmdTranslator=Translator(lsb,comp)
