--- a/protocols.ini
+++ b/protocols.ini
@@ -1116,8 +1116,9 @@ DeviceTranslator=Translator(lsb,comp,0,8,16) Translator(lsb,comp,1,8,24) \
                  Translator(lsb,comp,4,8,48) Translator(lsb,comp,5,8,56)
 FixedData=bf fb ff ff ff ff ff ff
 CmdParms=OBC,Device:1|2|3|4|5,Sub Device:2|3|4|5|6
-CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,3,8,comp) Translator(2,4,12,lsb)
-CmdParmInit=PickInitializer(1,0,1,2,3,4) PickInitializer(2,1,2,3,4,5)
+CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,4,8,comp,0,1) Translator(2,4,12,lsb)
+ImportCmdTranslator=Translator(0,4,8,comp) Translator(1,4,12,lsb,0,-2)
+CmdParmInit=PickInitializer(1,0,1,2,n3,n4) PickInitializer(2,1,2,n3,n4,n5)
 DefaultCmd=ff 00
 Code.S3C80=45 91 82 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 7B 90 C9 06 D0 03 54 B0 C2 B0 C3 08 0C 90 C0 FB 07 87 43 03 97 42 03 2E 3E 37 25 05 37 37 02 8B EC E6 10 04 E4 0B 07 E4 05 08 B4 06 08 B4 07 08 8D 01 46
 
