--- a/protocols.ini
+++ b/protocols.ini
@@ -1374,6 +1374,18 @@ Code.S3C80=45 91 51 8B 12 8F 45 08 08 00 DA 02 7B 00 DA 00 C6 90 C9 06 D0 03 54 
 # Code.740=00 00 01 A5 5D A0 50 22 42 1A D0 F9 60
 # Code.6805-C9=00 00 01 CD 01 92 A6 51 CD 01 9E 3A 50 26 F7 81
 
+[pid-0001]
+PID=00 01
+CmdParms=OBC:5=0
+CmdTranslator=Translator(comp,0,5)
+Notes=KM (as of version 8.31) has incorrect OBC translation for pid-0001, so if you need to convert a pid-0001 upgrade \
+      to or from KM, make sure the KM side is in EFC mode.  EFC numbers should be consistent between KM, RM and \
+      DecodeIr across all remotes that support pid-0001.  OBC numbers should be consistent between RM and \
+      DecodeIr, but not KM.
+Code.S3C80=00 00 01 8B 12 84 49 00 05 00 0C 12 31 00 0C 1A 57 36 C9 00 0C 29 44 8D 01 46
+Code.740=00 00 01 80 0C A0 E2 40 07 00 05 0D 1C 12 B1 23 53 A5 6A 22 37 A2 81 A0 1A 22 44 4C 00 FF
+Code.6805-RC16/18=00 00 01 20 13 84 49 00 05 09 05 23 0D 05 36 1B 6F 00 0F 00 E1 04 05 CB AE 0E CD 01 CA CC 01 AF
+
 [pid-0083]
 PID=00 83
 CmdParms=OBC:5=0
@@ -2302,13 +2314,6 @@ Code.740=07 1B 11 F7 5D 07 22 10 D0 03 3C 14 83 FF 5D BF 3C AF 3E EF 28 3C C8 22
 Code.6805-C9=07 1C 11 0F 5A 09 CD 01 AD 25 04 AE 15 20 02 AE 01 1F 5A BF 53 B6 5A B7 52 3F 51 3C 51 B6 5B B7 50 33 50 A6 14 CD 00 B7 0E 50 25 A6 07 AE 8B CD 01 9F 33 50 3A 51 26 EB A6 02 B7 51 38 50 3A 52 26 E1 A6 98 AE C6 CD 01 9E 3A 53 26 C8 CC 01 89 A6 A1 4A 26 FD A6 15 CD 00 B7 A6 06 AE 4E CD 01 9F 20 CF
 Code.6805-RC16/18=0C 26 11 20 0F C5 01 08 00 00 7C 7D 04 7C FB AF C8 04 7C 01 0F 5A 0B 1F 5A CD 01 A1 25 04 A6 15 B7_80 B6 5A 48 4A 97 A0 08 24 04 BF_67 20 02 B7_68 A6 08 B7 50 B6 5B 97 53 48 39 5B 39 5A 58 39 5B 39 5A 3A 50 26 F2 38 5B 39 5A 3C D6 AE 03 E6_70 E7 B9 5A 26 F9 CC 01 AF
 
-# [pid: 00 01]
-# PID=00 01
-# DefaultCmd=00
-# Code.S3C80=00 00 01 8B 12 84 49 00 05 00 0C 12 31 00 0C 1A 57 36 C9 00 0C 29 44 8D 01 46
-# Code.740=00 00 01 80 0C A0 E2 40 07 00 05 0D 1C 12 B1 23 53 A5 6A 22 37 A2 81 A0 1A 22 44 4C 00 FF
-# Code.6805-RC16/18=00 00 01 20 13 84 49 00 05 09 05 23 0D 05 36 1B 6F 00 0F 00 E1 04 05 CB AE 0E CD 01 CA CC 01 AF
-#
 # [pid: 00 03]
 # PID=00 03
 # DefaultCmd=00
