Changes to GI 4DTV protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@550 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -730,14 +730,25 @@ Code.6805-RC16/18=0F 25 11 20 0B 05 04 08 10 3A 68 01 69 3D 21 00 3F 54 19 5A B6
 #                  CC 01 B2
 
 [GI 4DTV Hacked]
-PID=00 44
-CmdTranslator=Translator(lsb)
-CmdParms=OBC=0
+PID=00 A4
+VariantName=hacked.S3C80
+FixedData=C6 3D A5 EF 
+DevParms=Unit Code:2=0
+CmdTranslator=Translator(lsb,0,6) TranslatorFromDev(lsb,0,2,6)
+CmdParms=OBC:6=0
 Notes=hacked version
-Code.S3C80=3D 91 01 8B 12 C5 45 08 04 01 F4 05 C8 01 F4 01 E0 C3 3C 09 C4 03 D4 08 03 18 03 F0 C1 B2 01 E0 C1 D0 C1 B2 01 F0 C1 56 C1 C0 D0 C1 B2 01 90 C1 56 C1 40 B2 01 18 03 E0 C1 B2 01 09 04 20 10 8D 01 46
+Code.S3C80=3D 91 41 8B 12 F5 45 04 08 01 F4 05 C8 01 F4 01 E0 C3 3C 09 C4 03 D4 B0 C0 1C 04 28 07 87 31 02 4C 02 F0 C3 C0 C2 FB 02 B2 03 4A F6 1A EF 09 03 8D 01 33
+
+[GI 4DTV Hacked]
+PID=00 A4
+VariantName=hacked.other
+DevParms=Unit Code:2=0
+CmdTranslator=Translator(lsb,0,6) TranslatorFromDev(lsb,0,2,6)
+CmdParms=OBC:6=0
+Notes=hacked version
 Code.740=0B 19 01 80 0F E0 B2 01 26 08 04 04 D3 02 3A 61 A8 C0 03 8A A9 00 F7 5D 02 49 C0 D7 5D 02 49 60 B7 5D 02 49 30 97 5D 02 49 D0 77 5D 02 49 A0 57 5D 02 49 50 37 5D 02 49 E0 17 5D 02 49 F0 85 5E E6 69 4C 00 FF
 Code.6805-C9=0B 1B 01 20 0E E0 72 26 08 04 04 D2 02 39 58 0D C0 03 8A 3F 7D 3F 5B BE 5A A6 C0 AD 2A A6 60 AD 26 A6 30 AD 22 A6 D0 AD 1E A6 A0 AD 1A A6 50 AD 16 A6 E0 AD 12 A6 F0 AD 0E BE 5B 2A 02 AD 0F 58 26 F9 3C 66 CC 01 83 58 24 10 B8 5B B7 5B B6 6F A0 98 B7 6F B6 6E A2 02 B7 6E 81
-Code.6805-RC16/18=0F 26 01 20 10 C5 45 08 04 02 F9 EE 00 F9 FA 61 A8 00 41 E1 F4 4F 0F 5A 02 A8 C0 0D 5A 02 A8 60 0B 5A 02 A8 30 09 5A 02 A8 D0 07 5A 02 A8 A0 05 5A 02 A8 50 03 5A 02 A8 E0 01 5A 02 A8 F0 B7 5B 3C 67 CC 01 AF
+Code.6805-RC16/18=0F 26 01 20 10 C5 45 08 04 02 F9 EE 00 F9 FA 61 A8 00 41 E1 F4 4F 0F 5A 02 A8 C0 0D 5A 02 A8 60 0B 5A 02 A8 30 09 5A 02 A8 D0 07 5A 02 A8 A0 05 5A 02 A8 50 03 5A 02 A8 E0 01 5A 02 A8 F0 B7 5B 3C_66 CC 01 AF
 
 [GI 4DTV Official]
 PID=00 A4
