Added GXB protocol Modified Streamzap protocol to be compatible with decodes Added 56Khz version of Streamzap
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@553 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -772,6 +772,14 @@ Code.740=0B 1A 01 80 15 E0 BE 01 13 08 08 06 C7 03 DB 61 A8 56 06 CE 02 00 61 A8
 Code.6805-C9=0B 1A 01 20 15 E0 FE 00 14 08 08 06 CA 03 E5 28 63 56 06 CF 02 00 71 76 03 D8 3C 66 B6 5A AD 13 B6 5B 48 48 48 48 BB 5B 43 A4 F0 AB 10 AD 04 CD 01 83 81 AE 08 46 39 5B 5A 26 FA 81
 Code.6805-RC16/18=11 24 01 20 10 CC 4D 00 08 04 7C 65 02 7C 33 61 A8 00 84 C9 65 3C DD B6 5A AD 12 B6 5B 48 48 48 48 BB 5B 43 A4 F0 AB 10 AD 03 CC 01 AF AE 08 46 39 5B 5A 26 FA 81
 
+[GXB]
+PID=01 DF
+CmdParms=Device:4,OBC:8
+CmdTranslator=Translator(0,4) Translator(1,8,4) XorCheck(1,12,1,8)
+DefaultCmd=00 00
+Code.S3C80= 3D 90 02 8B 15 88 25 08 08 03 0C 00 F0 01 04 02 \
+            F8 0D AC 01 04 00 F0 FF FF 05 8D 01 46 
+
 [HK Combo]
 PID=01 41
 CmdTranslator=Translator(lsb,0,1,0) Translator(lsb,comp,1,8,8)
@@ -2205,14 +2213,26 @@ Code.S3C80=02 02 31 8B 14 F5 15 05 07 02 58 01 18 01 2C 01 18 59 69 04 B3 01 18 
 
 [Streamzap]
 PID=01 24
-DevParms=Device Code:6=35
-DeviceTranslator=Translator(comp,0,6,2)
-FixedData=ff
-CmdTranslator=Translator(comp,0,6)
+DevParms=Device Code:6=35,OBC>63:bool
+DeviceTranslator=Translator(comp,0,6,2) Translator(1,1)
+FixedData=40
+CmdTranslator=TranslatorWithDevBool(comp,1,0,6)
 DefaultCmd=ff
-CmdParms=OBC:6=0
+CmdParms=OBC:7=0
 Notes=This protocol is similar to RC5 but has an extra device bit
 Code.S3C80=43 8C 11 8B 13 85 85 10 08 06 01 A6 01 92 01 A6 01 92 A3 34 01 A6 00 00 08 00 27 0D 03 8D 01 46
+
+[Streamzap_57Khz]
+PID=01 26
+VariantName=S57
+DevParms=Device Code:6=35,OBC>63:bool
+DeviceTranslator=Translator(comp,0,6,2) Translator(1,1)
+FixedData=40
+CmdTranslator=TranslatorWithDevBool(comp,1,0,6)
+DefaultCmd=ff
+CmdParms=OBC:7=0
+Notes=This protocol is identical to Streamzap except for frequency
+Code.S3C80=2C 5D 11 8B 13 85 85 10 08 06 01 A6 01 92 01 A6 01 92 A3 34 01 A6 00 00 08 00 27 0D 03 8D 01 46
 
 [Teac-K]
 OldNames=Teac-K (*)
