--- a/protocols.ini
+++ b/protocols.ini
@@ -2094,6 +2094,16 @@ Code.S3C80=45 91 52 8B 18 8F 45 08 08 00 DA 00 C6 00 DA 02 7D 27 70 06 D1 03 40 
 Code.740=0B 1A 52 80 10 E1 72 10 08 08 01 7F 02 94 19 10 80 03 2B 00 08 07 5D 06 E6 5B E6 69 80 0A E6 5B A9 5F 85 71 A9 68 85 72 4C 00 FF
 Code.6805-RC16/18=11 24 52 20 18 8F 45 08 08 00 63 69 01 63 3A 13 C2 00 31 25 A8 49 3E 20 86 13 28 2A 9D 3C 58 03 5A 0B 00 5A 22 B6_79 B7_64 B6_7A B7_65 01 5A 0A B6_77 B7_6F B6_78 B7_70 17_7B 03 5A 12 B6_75 B7_6F B6_76 B7_70 20 08 A6 2A B7_6F A6 80 B7_70 CC 01 B2
 
+[Somfy]
+PID=01 A1
+VariantName=Somfy2
+CmdParms=Device:3,SubDevice:4,OBC:2=1
+CmdTranslator=Translator(lsb,0,3,2) Translator(lsb,1,4,5) Translator(lsb,2,2)
+DefaultCmd=00 00
+Code.S3C80= 41 9B 02 8B 15 88 05 08 08 01 4E 00 F0 00 9A 01 A4 04 9C 04 0C 00 DE FF FF 01 8D 01 46 
+Notes=The value decoded by DecodeIr as SubDevice and required here (on the functions sheet) as SubDevice seems to be some \
+sort of check nibble.  In the eight known samples of this protocol SubDevice=OBC*4+Device+3.
+
 [Sony 12/15]
 OldNames=Sony12/15
 PID=00 CA
@@ -2103,7 +2113,7 @@ CmdParmInit=PickInitializer(0,N0,N2)
 Notes=Combines two devices, each of which may be either Sony12 or Sony15 \
    \n\n\
    Leaving the "Force Sony15" checkbox blank is almost always correct. \
-   Device numbers 32 and greater cannot be Sony12 and are automatically Sony15 \
+   Device numbers 32 and greater cannot be Sony12 and are automatically Sony15. \
    Device numbers less than 32 can be Sony12 or Sony15, but it is VERY rare for \
    them to be Sony15.  When you leave the check box blank Device numbers less \
    than 32 are Sony12, which is almost always correct.  Check "Force Sony15" to \
