Fixes for Pioneer Mix protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@555 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -732,7 +732,7 @@ Code.6805-RC16/18=0F 25 11 20 0B 05 04 08 10 3A 68 01 69 3D 21 00 3F 54 19 5A B6
 [GI 4DTV Hacked]
 PID=00 A4
 VariantName=hacked.S3C80
-FixedData=C6 3D A5 EF 
+FixedData=C6 3D A5 EF
 DevParms=Unit Code:2=0
 CmdTranslator=Translator(lsb,0,6) TranslatorFromDev(lsb,0,2,6)
 CmdParms=OBC:6=0
@@ -1541,10 +1541,10 @@ double-style signals.\
 Cmd2 (OBC)= the OBC command code used in the rest of the double-style \
 signals (if present)\
 \n\n\
-Then on the Functions sheet, you indicate which style of signal to \
-use for each function. Do this by selecting either "Single" or "Double" \
-for the Style column. For "Double" style commands, select the command to \
-to be used in the "2nd Cmd" column.  This column is ignored when the Style is "Single".
+On the Functions panel, \n\
+For single-style signals, set the Prefix Device and Prefix Command to "none", and Device to the value of Device 1.\n\
+For double-style signals, set the Prefix Device to the value entered for "Device 1" and set Prefix Command to \
+the value of Command 1 or Command 2.  Set Device to the value of Device 2.
 Code.S3C80=40 84 42 8B 12 E5 44 08 08 01 09 00 FA 01 09 03 \
            16 C3 3C 10 A9 08 43 76 08 02 6B 03 E4 06 04 76 \
            08 01 EB 06 46 29 01 8D 01 46 B0 01 68 07 E4 04 \
