Fix Panasonic MIX Combo hex translation Add Panasonic2 (LCD-Official)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@563 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -778,7 +778,7 @@ CmdParms=Device:4,OBC:8
 CmdTranslator=Translator(0,4) Translator(1,8,4) XorCheck(1,12,1,8)
 DefaultCmd=00 00
 Code.S3C80= 3D 90 02 8B 15 88 25 08 08 03 0C 00 F0 01 04 02 \
-            F8 0D AC 01 04 00 F0 FF FF 05 8D 01 46 
+            F8 0D AC 01 04 00 F0 FF FF 05 8D 01 46
 
 [HK Combo]
 PID=01 41
@@ -1134,11 +1134,11 @@ DeviceTranslator=Translator(lsb,comp,0,8,16) Translator(lsb,comp,1,8,24) \
                  Translator(lsb,comp,2,8,32) Translator(lsb,comp,3,8,40) \
                  Translator(lsb,comp,4,8,48) Translator(lsb,comp,5,8,56)
 FixedData=bf fb ff ff ff ff ff ff
-CmdParms=OBC,Device:1|2|3|4|5,Sub Device:2|3|4|5|6
-CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,4,8,comp,0,1) Translator(2,4,12,lsb)
+CmdParms=OBC,Device:1|2|3|4|5=0,Sub Device:2|3|4|5|6=0
+CmdTranslator=Translator(lsb,comp,0,8,0) PanasonicMixComboTranslator()
 ImportCmdTranslator=Translator(0,4,8,comp) Translator(1,4,12,lsb,0,-2)
 CmdParmInit=PickInitializer(1,0,1,2,n3,n4) PickInitializer(2,1,2,n3,n4,n5)
-DefaultCmd=ff 00
+DefaultCmd=ff C0
 Code.S3C80=45 91 82 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 7B 90 C9 06 D0 03 54 B0 C2 B0 C3 08 0C 90 C0 FB 07 87 43 03 97 42 03 2E 3E 37 25 05 37 37 02 8B EC E6 10 04 E4 0B 07 E4 05 08 B4 06 08 B4 07 08 8D 01 46
 
 [Panasonic VCR Combo]
@@ -1366,8 +1366,9 @@ Notes=Combines some Sub Device numbers for one Device number. \
       work and your remote happens to have this protocol built in.  Otherwise, \
       use Panasonic Combo2, which does the same job correctly.
 
-[Panasonic2 (LCD)]
+[Panasonic2 (LCD-Hacked)]
 PID=01 09
+VariantName=Hacked
 DevParms=Main Device=128,Sub Device=72,Sub Device 2=0,OEM Dev1=2,OEM Dev2=32
 DeviceTranslator=Translator(lsb,0,8,16) \
 Translator(lsb,1,8,24) \
@@ -1386,6 +1387,29 @@ the way they are used in the more common Panasonic protocol. \
 We don't yet know "Sub Device 2" really is. The default value 0 matches \
 all samples we've seen so far.
 Code.S3C80=45 91 51 8B 12 8F 45 08 08 00 DA 02 7B 00 DA 00 C6 90 C9 06 D0 03 54 20 11 E4 05 09 B4 06 09 B4 07 09 B4 08 09 8D 01 46
+
+[Panasonic2 (LCD-Official)]
+PID=01 09
+OldNames=Panasonic2 (LCD)
+DevParms=Main Device=128,Sub Device=72,Sub Device 2=0,OEM Dev1=2,OEM Dev2=32
+DeviceTranslator=Translator(lsb,comp,0,8,16) \
+Translator(lsb,comp,1,8,24) \
+Translator(lsb,comp,2,8,32) \
+Translator(lsb,comp,3,8,0) \
+Translator(lsb,comp,4,8,8)
+FixedData=00 00 00 00 00
+CmdTranslator=Translator(lsb,comp)
+CmdParms=OBC=0
+Notes=56 bit version of Panasonic \
+\n\n\
+The OEM values default to 2 and 32 (the only values used by Panasonic) \
+If there is a 56 bit version of JVC-48, it would use 3 and 1 there. \
+The Main Device and Sub Device are used in this protocol similarly to \
+the way they are used in the more common Panasonic protocol. \
+We don't yet know "Sub Device 2" really is. The default value 0 matches \
+all samples we've seen so far.
+Code.S3C80=45 91 51 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 7B 90 C9 06 D0 03 54 E4 08 09 B4 05 09 B4 06 09 20 11 8D 01 46
+Code.740=0D 1A 51 80 01 00 A5 62 45 5F 45 60 85 63 A9 80 20 DB 00 A2 37 A0 03 22 44 3C 00 57 3C 07 55 A6 57 B5 5D 85 59 20 70 01 E6 57 C6 55 D0 F1 A9 10 20 DB 00 A2 24 A0 61 22 44 22 06 90 D1 60 3C 08 54 A9 10 20 DB 00 26 59 B0 08 A2 A9 A0 02 22 44 80 06 A2 86 A0 01 22 44 C6 54 D0 E5 60
 
 # [Pause Protocol]
 # PID=01 FB
@@ -2100,7 +2124,7 @@ VariantName=Somfy2
 CmdParms=Device:3,SubDevice:4,OBC:2=1
 CmdTranslator=Translator(lsb,0,3,2) Translator(lsb,1,4,5) Translator(lsb,2,2)
 DefaultCmd=00 00
-Code.S3C80= 41 9B 02 8B 15 88 05 08 08 01 4E 00 F0 00 9A 01 A4 04 9C 04 0C 00 DE FF FF 01 8D 01 46 
+Code.S3C80= 41 9B 02 8B 15 88 05 08 08 01 4E 00 F0 00 9A 01 A4 04 9C 04 0C 00 DE FF FF 01 8D 01 46
 Notes=The value decoded by DecodeIr as SubDevice and required here (on the functions sheet) as SubDevice seems to be some \
 sort of check nibble.  In the eight known samples of this protocol SubDevice=OBC*4+Device+3.
 
